# osc-automation

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT_SUMMARY.md  DEVELOPMENT_WORKFLOW.md  ENV_CONFIGURATION.md  FRAMEWORK_PROMPT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  Makefile  OSC_ERRORS.txt  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_NEW_ARCHITECTURE.md  SETUP_COMPLETE.md  TERMINAL_DATA_CONFIGURATION.md  TERMINAL_DISCOVERY_CODE_REVIEW.md  TERMINAL_DISCOVERY_GUIDE.md  TERMINAL_DISCOVERY_NAVIGATION_FIX.md  cache_cleanup.py  pyproject.toml  requirements.txt  runner.py  runner_old.py  test_framework.py
apps/: __init__.py
config/: __init__.py  browser.config.yaml  browser_config.py
core/: __init__.py  automation_core.py  browser.py  colored_logger.py  components.py  config.py  gemini_client.py  logger.py  logging_system.py  performance.py  performance_analysis.py  performance_decorators.py  performance_reporter.py  run_context.py  types.py  ui.py  utils.py
data/: data_importer.py  performance.db
docs/: GEMINI_IMPLEMENTATION_SUMMARY.md  GEMINI_README.md  cheat_sheet.md  gemini_client.md  osc_workflow_mapping.md  performance_analyzer.md  user_guide.md
examples/: component_based_workflow.py  gemini_client_examples.py  osc_workflow_example.py  simple_workflow_example.py
locators/: __init__.py  osc_locators.py
pages/: __init__.py  base_page.py
scripts/: __init__.py
tests/: test_env_config.py  test_gemini_setup.py  test_submit_control.py  test_terminal_data.py
utils/: __init__.py  decorators.py  locator_utils.py  logger.py
(+49 files in other folders)
